--- a/2.1. Python高级功能（Constructs）.ipynb
+++ b/2.1. Python高级功能（Constructs）.ipynb
@@ -930,8 +930,10 @@
     "collapsed": true
    },
    "source": [
-    "- 用标准形式定义的函数。 ①\n",
-    "- 在函数定义前放置一个用@符号开头的表达式就是修饰器②。@后面的部分必须是一个简单的表达式，通常，这只是函数或类的名字。这部分首先被评估，在下面的函数定义完成后，修饰器被调用，同时将新定义的函数对象作为惟一的参数。. The part after @ must be a simple expression, usually this is just the name of a function or class. This part is evaluated first, and after the function defined below is ready, the decorator is called with the newly defined function object as the single argument. The value returned by the decorator is attached to the original name of the function."
+    "- 用标准形式定义的函数。①\n",
+    "- 在函数定义前放置一个用@符号开头的表达式就是修饰器②。@后面的部分必须是一个简单的表达式，通常，这只是函数或类的名字。这部分首先被评估，在下面的函数定义完成后，修饰器被调用，同时将新定义的函数对象作为惟一的参数。修饰器的返回值被附加到函数的原始名称上。\n",
+    "\n",
+    "修饰器可以被应用于函数和类。对于类，语法是一样的 - 原始类定义被作为一个参数来调用修饰器，并且无论返回什么都被赋给原始的名称。在修饰器语法实现之前（[PEP 318](http://www.python.org/dev/peps/pep-0318)），通过将函数或类对象赋给一个临时的变量，然后显性引用修饰器，然后将返回值赋给函数的名称，也可以到达相同的效果。这听起来像是打更多的字，确实是这样，并且被修饰函数的名字也被打了两次，因为临时变量必须被使用至少三次，这很容易出错。无论如何，上面的例子等同于："
    ]
   },
   {
@@ -941,16 +943,447 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def function():                  # ①\n",
+    "    pass\n",
+    "function = decorator(function)   # ②"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "修饰器可以嵌套 - 应用的顺序是由底到顶或者由内到外。含义是最初定义的函数被第一个修饰器作为参数使用，第一个修饰器返回的内容被用于第二个修饰器的参数，...，最后一个修饰器返回的内容被绑定在最初的函数名称下。\n",
+    "\n",
+    "选择这种修饰器语法是因为它的可读性。因为是在函数头之前指定的，很明显它并不是函数体的一部分，并且很显然它只能在整个函数上运行。因为，表达式的前缀是@是如此的醒目很难错过（\"在你脸上\"，按照PEP的说法 :)）。当使用多个修饰器时，每一个都是单独的一行，一种很容易阅读的方式。\n",
+    "\n",
+    "### 2.1.2.1 替换或调整原始对象\n",
+    "\n",
+    "修饰器可以返回相同的函数或类对象，也可以返回完全不同的对象。在第一种情况下，修饰器可以利用函数和类对象是可变的这个事实，并且添加属性，即为类添加修饰字符串。修饰器可以做一些有用的事甚至都不需要修改对象，例如，在全局登记中登记被修饰的类。在第二种情况下，虚拟任何东西都是可能的：当原始函数或类的一些东西被替换了，那么新对象就可以是完全不同的。尽管如此，这种行为不是修饰器的目的：他们的目的是微调被修饰的对象，而不是一些不可预测的东西。因此，当一个”被修饰的“函数被用一个不同的函数替换，新函数通常调用原始的函数，在做完一些预备工作之后。同样的，当”被修饰的“类被新的类替换，新类通常也来自原始类。让修饰器的目的是”每次“都做一些事情，比如在修饰器函数中登记每次调用，只能使用第二类修饰器。反过来，如果第一类就足够了，那么最好使用第一类，因为，它更简单。\n",
+    "\n",
+    "### 2.1.2.2 像类和函数一样实现修饰器\n",
+    "\n",
+    "修饰器的惟一一个要求是可以用一个参数调用。这意味着修饰器可以像一般函数一样实现，或者像类用\\_\\_call\\_\\_方法实现，或者在理论上，甚至是lambda函数。让我们比较一下函数和类的方法。修饰器表达式（@后面的部分）可以仅仅是一个名字，或者一次调用。仅使用名字的方式很好（输入少，看起来更整洁等），但是，只能在不需要参数来自定义修饰器时使用。作为函数的修饰器可以用于下列两个情况："
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing decoration\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simple_decorator(function):\n",
+    "    print \"doing decoration\"\n",
+    "    return function\n",
+    "@simple_decorator\n",
+    "def function():\n",
+    "    print \"inside function\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defining the decorator\n",
+      "doing decoration, abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decorator_with_arguments(arg):\n",
+    "    print \"defining the decorator\"\n",
+    "    def _decorator(function):\n",
+    "        # in this inner function, arg is available too\n",
+    "        print \"doing decoration,\", arg\n",
+    "        return function\n",
+    "    return _decorator\n",
+    "\n",
+    "@decorator_with_arguments(\"abc\")\n",
+    "def function():\n",
+    "    print \"inside function\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面两个修饰器属于返回原始函数的修饰器。如果他们返回一个新的函数，则需要更多一层的嵌套。在最坏的情况下，三层嵌套的函数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defining the decorator\n",
+      "doing decoration, abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "def replacing_decorator_with_args(arg):\n",
+    "    print \"defining the decorator\"\n",
+    "    def _decorator(function):\n",
+    "        # in this inner function, arg is available too\n",
+    "        print \"doing decoration,\", arg\n",
+    "        def _wrapper(*args, **kwargs):\n",
+    "            print \"inside wrapper,\", args, kwargs\n",
+    "            return function(*args, **kwargs)\n",
+    "        return _wrapper\n",
+    "    return _decorator\n",
+    "@replacing_decorator_with_args(\"abc\")\n",
+    "def function(*args, **kwargs):\n",
+    "    print \"inside function,\", args, kwargs\n",
+    "    return 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside wrapper, (11, 12) {}\n",
+      "inside function, (11, 12) {}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function(11, 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "定义`_wrapper`函数来接收所有位置和关键词参数。通常，我们并不知道被修饰的函数可能接收什么参数，因此封装器函数只是向被封装的函数传递所有东西。一个不幸的结果是有误导性的表面函数列表。\n",
+    "\n",
+    "与定义为函数的修饰器相比，定义为类的复杂修饰器更加简单。当一个对象创建后，\\_\\_init\\_\\_方法仅允许返回`None`，已创建的对象类型是不可以修改的。这意味着当一个被作为类创建后，因此使用少参模式没有意义：最终被修饰的对象只会是由构建器调用返回的修饰对象的一个实例，并不是十分有用。因此，只需要探讨在修饰器表达式中带有参数并且修饰器\\_\\_init\\_\\_方法被用于修饰器构建，基于类的修饰器。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class decorator_class(object):\n",
+    "    def __init__(self, arg):\n",
+    "        # this method is called in the decorator expression\n",
+    "        print \"in decorator init,\", arg\n",
+    "        self.arg = arg\n",
+    "    def __call__(self, function):\n",
+    "        # this method is called to do the job\n",
+    "        print \"in decorator call,\", self.arg\n",
+    "        return function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in decorator init, foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "deco_instance = decorator_class('foo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in decorator call, foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "@deco_instance\n",
+    "def function(*args, **kwargs):\n",
+    "    print \"in function,\", args, kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in function, () {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "function()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "与通用规则相比（[PEP 8](http://www.python.org/dev/peps/pep-0008)），将修饰器写为类的行为更像是函数，因此，他们的名字通常是以小写字母开头。\n",
+    "\n",
+    "在现实中，创建一个新类只有一个返回原始函数的修饰器是没有意义的。人们认为对象可以保留状态，当修饰器返回新的对象时，这个修饰器更加有用。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class replacing_decorator_class(object):\n",
+    "    def __init__(self, arg):\n",
+    "        # this method is called in the decorator expression\n",
+    "        print \"in decorator init,\", arg\n",
+    "        self.arg = arg\n",
+    "    def __call__(self, function):\n",
+    "        # this method is called to do the job\n",
+    "        print \"in decorator call,\", self.arg\n",
+    "        self.function = function\n",
+    "        return self._wrapper\n",
+    "    def _wrapper(self, *args, **kwargs):\n",
+    "        print \"in the wrapper,\", args, kwargs\n",
+    "        return self.function(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in decorator init, foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "deco_instance = replacing_decorator_class('foo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in decorator call, foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "@deco_instance\n",
+    "def function(*args, **kwargs):\n",
+    "    print \"in function,\", args, kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in the wrapper, (11, 12) {}\n",
+      "in function, (11, 12) {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "function(11, 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "像这样一个修饰器可以非常漂亮的做任何事，因为它可以修改原始的函数对象和参数，调用或不调用原始函数，向后修改返回值。\n",
+    "\n",
+    "### 2.1.2.3 复制原始函数的文档字符串和其他属性\n",
+    "\n",
+    "当修饰器返回一个新的函数来替代原始的函数时，一个不好的结果是原始的函数名、原始的文档字符串和原始参数列表都丢失了。通过设置\\_\\_doc\\_\\_（文档字符串）、\\_\\_module\\_\\_和\\_\\_name\\_\\_（完整的函数），以及\\_\\_annotations\\_\\_（关于参数和返回值的额外信息，在Python中可用）可以部分”移植“这些原始函数的属性到新函数的设定。这可以通过使用[functools.update_wrapper](http://docs.python.org/2.7/library/functools.html#functools.update_wrapper)来自动完成。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defining the decorator\n",
+      "doing decoration, abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "def better_replacing_decorator_with_args(arg):\n",
+    "    print \"defining the decorator\"\n",
+    "    def _decorator(function):\n",
+    "        print \"doing decoration,\", arg\n",
+    "        def _wrapper(*args, **kwargs):\n",
+    "            print \"inside wrapper,\", args, kwargs\n",
+    "            return function(*args, **kwargs)\n",
+    "        return functools.update_wrapper(_wrapper, function)\n",
+    "    return _decorator\n",
+    "@better_replacing_decorator_with_args(\"abc\")\n",
+    "def function():\n",
+    "    \"extensive documentation\"\n",
+    "    print \"inside function\"\n",
+    "    return 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.function>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extensive documentation\n"
+     ]
+    }
+   ],
+   "source": [
+    "print function.__doc__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "One important thing is missing from the list of attributes which can be copied to the replacement function: the argument list. The default values for arguments can be modified through the __defaults__, __kwdefaults__ attributes, but unfortunately the argument list itself cannot be set as an attribute. This means that help(function) will display a useless argument list which will be confusing for the user of the function. An effective but ugly way around this problem is to create the wrapper dynamically, using eval. This can be automated by using the external decorator module. It provides support for the decorator decorator, which takes a wrapper and turns it into a decorator which preserves the function signature.\n",
+    "To sum things up, decorators should always use functools.update_wrapper or some other means of copying function attributes."
+   ]
   }
  ],
  "metadata": {
