--- a/2.3. 代码除错.ipynb
+++ b/2.3. 代码除错.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -595,8 +595,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####2.3.3.1.3 启动除错器的其他的方式"
+    "####2.3.3.1.3 启动除错器的其他的方式\n",
+    "\n",
+    "- 人为设置断点抛出异常\n",
+    "    \n",
+    "    如果你发现记录行数设置断点很枯燥，那么你也可以直接在你想要检查的位置抛出异常然后使用IPython的`%debug`。注意这种情况下，你无法步进或继续这个异常。\n",
+    "\n",
+    "- 用nosetests除错测试失败\n",
+    "    \n",
+    "    你可以运行`nosetests --pdb`来进入异常除错的事后剖析，运行`nosetests --pdb-failure`来用除错器检查失败的测试。\n",
+    "    \n",
+    "    此外，你可以通过安装nose插件[ipdbplugin](http://pypi.python.org/pypi/ipdbplugin)来在nose中为除错器使用Ipython界面。然后为nosetest传递`--ipdb`和`--ipdb-failure`选项。\n",
+    "\n",
+    "- 显性的调用除错器\n",
+    "\n",
+    "    在你想要进入除错器的地方插入下列几行："
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pdb; pdb.set_trace()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "**警告**：当运行nosetests时, 会抓取输出，因此会感觉除错器没起作用。只要运行nosetests用-s标记。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**图形化除错器和其他除错器**\n",
+    "\n",
+    "- 对于在代码中步进和检查变量，你会发现用图形化除错器比如[winpdb](http://winpdb.org/)，\n",
+    "- 或者，[pudb](http://pypi.python.org/pypi/pudb)是优秀的半图形除错器，在控制台带有文字用户界面。\n",
+    "- 同时，[pydbgr]项目可能也是值得一看的。\n",
+    "\n",
+    "###2.3.3.2 除错器命令和交互\n",
+    "\n",
+    "|   |   |\n",
+    "|---|---|\n",
+    "|l(list)|列出当前位置的代码|\n",
+    "|u(p)|在调用栈上向上走|\n",
+    "|d(own)|在调用栈上向下走|\n",
+    "|n(ext)|执行下一行代码(并不会进入新函数)|\n",
+    "|s(tep)|执行下一个语句(并不会进入新函数)|\n",
+    "|bt|打印调用栈|\n",
+    "|a|打印本地函数|\n",
+    "|!command|执行给到的Python命令(与pdb命令相对)|\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**警告：除错器命令不是Python代码**\n",
+    "\n",
+    "你不能以想要的方式命名变量。例如，如果你无法在当前的框架下用相同的名字覆盖变量：**用不同的名字，然后在除错器中输入代码时使用本地变量**。\n",
+    "\n",
+    "####2.3.3.2.1 在除错器中获得帮助\n",
+    "\n",
+    "输入`h`或者`help`来进入交互帮助："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Call--\n",
+      "> /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/core/displayhook.py(222)__call__()\n",
+      "-> def __call__(self, result=None):\n",
+      "(Pdb) help\n",
+      "\n",
+      "Documented commands (type help <topic>):\n",
+      "========================================\n",
+      "EOF    bt         cont      enable  jump  pp       run      unt   \n",
+      "a      c          continue  exit    l     q        s        until \n",
+      "alias  cl         d         h       list  quit     step     up    \n",
+      "args   clear      debug     help    n     r        tbreak   w     \n",
+      "b      commands   disable   ignore  next  restart  u        whatis\n",
+      "break  condition  down      j       p     return   unalias  where \n",
+      "\n",
+      "Miscellaneous help topics:\n",
+      "==========================\n",
+      "exec  pdb\n",
+      "\n",
+      "Undocumented commands:\n",
+      "======================\n",
+      "retval  rv\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pdb; pdb.set_trace()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##2.3.4 用gdb除错段错误（segmentation faults）\n",
+    "\n",
+    "如果有段错误，你不可以用pdb对它进行除错，因为在进入除错器之前，它会让Python解释器崩溃。同样的，如果在嵌入Python的C代码中有一个bug，pdb也是没用的。对于这种情况，我们可以转用gnu除错器，[gdb](http://www.gnu.org/s/gdb/)，在Linux可用。\n",
+    "\n",
+    "在我们开始使用gdb之前，让我们为它添加一些Python专有的工具。对于这个情况我们可以添加一些宏到我们的`~/.gbdinit`。宏的最优的选择取决于你的Python版本和gdb版本。. The optimal choice of macro depends on your Python version and your gdb version. I have added a simplified version in gdbinit, but feel free to read DebuggingWithGdb."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
