--- a/2.3. 代码除错.ipynb
+++ b/2.3. 代码除错.ipynb
@@ -57,9 +57,9 @@
     "\n",
     "---\n",
     "\n",
-    "##2.3.1 避免bugs\n",
+    "## 2.3.1 避免bugs\n",
     "\n",
-    "###2.3.1.1 避免麻烦的最佳代码实践\n",
+    "### 2.3.1.1 避免麻烦的最佳代码实践\n",
     "\n",
     "---\n",
     "**Brian Kernighan**\n",
@@ -78,7 +78,7 @@
     "- 试着限制代码的依赖。（松耦合）\n",
     "- 给变量、函数和模块有意义的名字（而不是数学名字）\n",
     "\n",
-    "###2.3.1.2 pyflakes：快速静态分析\n",
+    "### 2.3.1.2 pyflakes：快速静态分析\n",
     "\n",
     "在Python中有一些静态分析；举几个例子：\n",
     "- [pylint](http://www.logilab.org/857)\n",
@@ -95,7 +95,7 @@
     "\n",
     "强烈推荐在你的编辑器或IDE整合pyflakes (或 flake8)，**确实可以产出生产力的收益**。\n",
     "\n",
-    "####2.3.1.2.1 在当前编辑文件上运行pyflakes\n",
+    "#### 2.3.1.2.1 在当前编辑文件上运行pyflakes\n",
     "\n",
     "你可以在当前缓存器中绑定一个键来运行pyflakes。\n",
     "- **在kate中**\n",
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##2.3.2 除错工作流\n",
+    "## 2.3.2 除错工作流\n",
     "\n",
     "如果你确实有一个非无关紧要的bug，这个时候就是除错策略该介入的时候。没有银子弹。但是，策略会有帮助：\n",
     "    \n",
@@ -264,7 +264,7 @@
     "\n",
     "    **笔记**：一旦你遵从了这个流程：隔离一段可以重现bug的紧密代码段，并且用这段代码来修复bug，添加对应代码到你的测试套装。\n",
     "\n",
-    "##2.3.3 使用Python除错器\n",
+    "## 2.3.3 使用Python除错器\n",
     "\n",
     "python除错器，pdb: http://docs.python.org/library/pdb.html, 允许你交互的检查代码。\n",
     "\n",
@@ -281,14 +281,14 @@
     "\n",
     "--\n",
     "\n",
-    "###2.3.3.1 激活除错器\n",
+    "### 2.3.3.1 激活除错器\n",
     "\n",
     "启动除错器的方式:\n",
     "1. 事后剖析，在模块错误后启动除错器。\n",
     "2. 用除错器启动模块。\n",
     "3. 在模块中调用除错器。\n",
     "\n",
-    "####2.3.3.1.1 事后剖析\n",
+    "#### 2.3.3.1.1 事后剖析\n",
     "\n",
     "**情景**: 你在IPython中工作时，你的到了一个traceback。\n",
     "\n",
@@ -395,7 +395,7 @@
     "\n",
     "---\n",
     "\n",
-    "####2.3.3.1.2 逐步执行\n",
+    "#### 2.3.3.1.2 逐步执行\n",
     "\n",
     "**情景**：你相信模块中存在bug，但是你不知道在哪。\n",
     "\n",
@@ -595,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####2.3.3.1.3 启动除错器的其他的方式\n",
+    "#### 2.3.3.1.3 启动除错器的其他的方式\n",
     "\n",
     "- 人为设置断点抛出异常\n",
     "    \n",
@@ -641,7 +641,7 @@
     "- 或者，[pudb](http://pypi.python.org/pypi/pudb)是优秀的半图形除错器，在控制台带有文字用户界面。\n",
     "- 同时，[pydbgr]项目可能也是值得一看的。\n",
     "\n",
-    "###2.3.3.2 除错器命令和交互\n",
+    "### 2.3.3.2 除错器命令和交互\n",
     "\n",
     "|   |   |\n",
     "|---|---|\n",
@@ -709,108 +709,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##2.3.4 用gdb除错段错误（segmentation faults）\n",
+    "## 2.3.4 用gdb除错段错误（segmentation faults）\n",
     "\n",
     "如果有段错误，你不可以用pdb对它进行除错，因为在进入除错器之前，它会让Python解释器崩溃。同样的，如果在嵌入Python的C代码中有一个bug，pdb也是没用的。对于这种情况，我们可以转用gnu除错器，[gdb](http://www.gnu.org/s/gdb/)，在Linux可用。\n",
     "\n",
-    "在我们开始使用gdb之前，让我们为它添加一些Python专有的工具。对于这个情况我们可以添加一些宏到我们的`~/.gbdinit`。宏的最优的选择取决于你的Python版本和gdb版本。. The optimal choice of macro depends on your Python version and your gdb version. I have added a simplified version in gdbinit, but feel free to read DebuggingWithGdb."
+    "在我们开始使用gdb之前，让我们为它添加一些Python专有的工具。对于这个情况我们可以添加一些宏到我们的`~/.gbdinit`。宏的最优的选择取决于你的Python版本和gdb版本。我在[gdbint](http://scipy-lectures.github.io/_downloads/gdbinit)添加了一个简单的版本，但是别客气读一下[DebuggingWithGdb](http://wiki.python.org/moin/DebuggingWithGdb)。\n",
+    "\n",
+    "要用gdb来除错Python脚本[segfault.py](http://scipy-lectures.github.io/_downloads/segfault.py), 我们可以想如下这样在gdb中运行这个脚本\n",
+    "\n",
+    "```\n",
+    "$ gdb python\n",
+    "...\n",
+    "(gdb) run segfault.py\n",
+    "Starting program: /usr/bin/python segfault.py\n",
+    "[Thread debugging using libthread_db enabled]\n",
+    "\n",
+    "Program received signal SIGSEGV, Segmentation fault.\n",
+    "_strided_byte_copy (dst=0x8537478 \"\\360\\343G\", outstrides=4, src=\n",
+    "    0x86c0690 <Address 0x86c0690 out of bounds>, instrides=32, N=3,\n",
+    "    elsize=4)\n",
+    "        at numpy/core/src/multiarray/ctors.c:365\n",
+    "365            _FAST_MOVE(Int32);\n",
+    "(gdb)\n",
+    "```\n",
+    "\n",
+    "我们得到了一个segfault, gdb捕捉到它在C级栈（并不是Python调用栈）中进行事后剖析除错。我们可以用gdb的命令来对C调用栈进行除错：\n",
+    "\n",
+    "```\n",
+    "(gdb) up\n",
+    "#1  0x004af4f5 in _copy_from_same_shape (dest=<value optimized out>,\n",
+    "    src=<value optimized out>, myfunc=0x496780 <_strided_byte_copy>,\n",
+    "    swap=0)\n",
+    "at numpy/core/src/multiarray/ctors.c:748\n",
+    "748         myfunc(dit->dataptr, dest->strides[maxaxis],\n",
+    "```\n",
+    "\n",
+    "如你所见，现在，我们numpy的C代码中。我们想要知道哪个Python代码触发了这个segfault，因此，在栈上向上搜寻，直到我们达到Python执行循环：\n",
+    "\n",
+    "```\n",
+    "(gdb) up\n",
+    "#8  0x080ddd23 in call_function (f=\n",
+    "    Frame 0x85371ec, for file /home/varoquau/usr/lib/python2.6/site-packages/numpy/core/arrayprint.py, line 156, in _leading_trailing (a=<numpy.ndarray at remote 0x85371b0>, _nc=<module at remote 0xb7f93a64>), throwflag=0)\n",
+    "    at ../Python/ceval.c:3750\n",
+    "3750    ../Python/ceval.c: No such file or directory.\n",
+    "        in ../Python/ceval.c\n",
+    "\n",
+    "(gdb) up\n",
+    "#9  PyEval_EvalFrameEx (f=\n",
+    "    Frame 0x85371ec, for file /home/varoquau/usr/lib/python2.6/site-packages/numpy/core/arrayprint.py, line 156, in _leading_trailing (a=<numpy.ndarray at remote 0x85371b0>, _nc=<module at remote 0xb7f93a64>), throwflag=0)\n",
+    "    at ../Python/ceval.c:2412\n",
+    "2412    in ../Python/ceval.c\n",
+    "(gdb)\n",
+    "```\n",
+    "\n",
+    "一旦我们进入了Python执行循环，我们可以使用特殊的Python帮助函数。例如我们可以找到对应的Python代码：\n",
+    "\n",
+    "```\n",
+    "(gdb) pyframe\n",
+    "/home/varoquau/usr/lib/python2.6/site-packages/numpy/core/arrayprint.py (158): _leading_trailing\n",
+    "(gdb)\n",
+    "```\n",
+    "\n",
+    "这是numpy代码，我们需要向上走直到找到我们写的代码：\n",
+    "\n",
+    "```\n",
+    "(gdb) up\n",
+    "...\n",
+    "(gdb) up\n",
+    "#34 0x080dc97a in PyEval_EvalFrameEx (f=\n",
+    "    Frame 0x82f064c, for file segfault.py, line 11, in print_big_array (small_array=<numpy.ndarray at remote 0x853ecf0>, big_array=<numpy.ndarray at remote 0x853ed20>), throwflag=0) at ../Python/ceval.c:1630\n",
+    "1630    ../Python/ceval.c: No such file or directory.\n",
+    "        in ../Python/ceval.c\n",
+    "(gdb) pyframe\n",
+    "segfault.py (12): print_big_array\n",
+    "```\n",
+    "\n",
+    "对应代码是："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** Blank or comment\n",
-      "*** Blank or comment\n",
-      "*** Blank or comment\n",
-      "*** Blank or comment\n",
-      "NOTE: Enter 'c' at the ipdb>  prompt to continue execution.\n",
-      "> \u001b[0;32m/Users/cloga/Documents/scipy-lecture-notes_cn/wiener_filtering.py\u001b[0m(2)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m      1 \u001b[0;31m\"\"\" Wiener filtering a noisy Lena: this module is buggy\n",
-      "\u001b[0m\u001b[0;32m----> 2 \u001b[0;31m\"\"\"\n",
-      "\u001b[0m\u001b[0;32m      3 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "ipdb> n\n",
-      "> \u001b[0;32m/Users/cloga/Documents/scipy-lecture-notes_cn/wiener_filtering.py\u001b[0m(4)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m      3 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m----> 4 \u001b[0;31m\u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m      5 \u001b[0;31m\u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n"
-     ]
-    }
-   ],
    "source": [
-    "%run -d wiener_filtering.py"
+    "def make_big_array(small_array):\n",
+    "    big_array = stride_tricks.as_strided(small_array,\n",
+    "                                         shape=(2e6, 2e6), strides=(32, 32))\n",
+    "    return big_array\n",
+    "\n",
+    "def print_big_array(small_array):\n",
+    "    big_array = make_big_array(small_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这样segfault在打印`big_array[-10:]`时发生。原因非常简单，`big_array`被分配到程序内存以外。\n",
+    "\n",
+    "---\n",
+    "**笔记：**对于在`gdbinit`中定义的Python特有命令，读一下这个文件的源代码。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**总结练习**\n",
+    "\n",
+    "下面的脚本是详细而清晰的。它想要回答一个实际的有趣数值计算，但是，它并不起作用...你可以为它除错吗？\n",
+    "\n",
+    "Python源代码：[to_debug.py](http://scipy-lectures.github.io/_downloads/to_debug.py)"
    ]
   },
   {
@@ -820,223 +831,71 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "A script to compare different root-finding algorithms.\n",
+    "\n",
+    "This version of the script is buggy and does not execute. It is your task\n",
+    "to find an fix these bugs.\n",
+    "\n",
+    "The output of the script sould look like:\n",
+    "\n",
+    "    Benching 1D root-finder optimizers from scipy.optimize:\n",
+    "                brenth:   604678 total function calls\n",
+    "                brentq:   594454 total function calls\n",
+    "                ridder:   778394 total function calls\n",
+    "                bisect:  2148380 total function calls\n",
+    "\"\"\"\n",
+    "from itertools import product\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy import optimize\n",
+    "\n",
+    "FUNCTIONS = (np.tan,  # Dilating map\n",
+    "             np.tanh, # Contracting map\n",
+    "             lambda x: x**3 + 1e-4*x, # Almost null gradient at the root\n",
+    "             lambda x: x+np.sin(2*x), # Non monotonous function\n",
+    "             lambda x: 1.1*x+np.sin(4*x), # Fonction with several local maxima\n",
+    "            )\n",
+    "\n",
+    "OPTIMIZERS = (optimize.brenth, optimize.brentq, optimize.ridder,\n",
+    "              optimize.bisect)\n",
+    "\n",
+    "\n",
+    "def apply_optimizer(optimizer, func, a, b):\n",
+    "    \"\"\" Return the number of function calls given an root-finding optimizer, \n",
+    "        a function and upper and lower bounds.\n",
+    "    \"\"\"\n",
+    "    return optimizer(func, a, b, full_output=True)[1].function_calls,\n",
+    "\n",
+    "\n",
+    "def bench_optimizer(optimizer, param_grid):\n",
+    "    \"\"\" Find roots for all the functions, and upper and lower bounds\n",
+    "        given and return the total number of function calls.\n",
+    "    \"\"\"\n",
+    "    return sum(apply_optimizer(optimizer, func, a, b)\n",
+    "               for func, a, b in param_grid)\n",
+    "\n",
+    "\n",
+    "def compare_optimizers(optimizers):\n",
+    "    \"\"\" Compare all the optimizers given on a grid of a few different\n",
+    "        functions all admitting a signle root in zero and a upper and\n",
+    "        lower bounds.\n",
+    "    \"\"\"\n",
+    "    random_a = -1.3 + np.random.random(size=100)\n",
+    "    random_b =   .3 + np.random.random(size=100)\n",
+    "    param_grid = product(FUNCTIONS, random_a, random_b)\n",
+    "    print \"Benching 1D root-finder optimizers from scipy.optimize:\"\n",
+    "    for optimizer in OPTIMIZERS:\n",
+    "        print '% 20s: % 8i total function calls' % (\n",
+    "                    optimizer.__name__, \n",
+    "                    bench_optimizer(optimizer, param_grid)\n",
+    "                )\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    compare_optimizers(OPTIMIZERS)"
+   ]
   }
  ],
  "metadata": {
